<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_2"
        tools:ignore="ExtraText">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextHint" />

        <Button
            android:id="@+id/buttonCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCounterText" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/toggleButtonText"
            android:textOff="@string/toggleButtonTextOff"
            android:textOn="@string/toggleButtonTextOn" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_compat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/toggleButtonTextOn"
            android:textOff="@string/switchCompatTextOff"
            android:textOn="@string/switchCompatTextOn"
            android:theme="@style/MySwitch" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/padding_1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_2">

                <TextView
                    android:id="@+id/textViewColorLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewColorLargeText"
                    android:textSize="@dimen/textViewColorLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewColorSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewColorSmallText"
                    android:textSize="@dimen/textViewColorSmall"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="@dimen/padding_2">

                <CheckBox
                    android:id="@+id/checkBoxColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonAccount"
        app:cornerRadius="@dimen/buttonRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>